// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `<div class="zv-tabbar zv-tabbar--fixed"></div>`;

exports[`route mode 1`] = `
<div class="zv-hairline--top-bottom zv-tabbar zv-tabbar--fixed">
  <div class="zv-tabbar-item zv-tabbar-item--active">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 2`] = `
<div class="zv-hairline--top-bottom zv-tabbar zv-tabbar--fixed">
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item zv-tabbar-item--active">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 3`] = `
<div class="zv-hairline--top-bottom zv-tabbar zv-tabbar--fixed">
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item zv-tabbar-item--active">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 1`] = `
<div class="zv-hairline--top-bottom zv-tabbar zv-tabbar--fixed">
  <div class="zv-tabbar-item zv-tabbar-item--active">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 2`] = `
<div class="zv-hairline--top-bottom zv-tabbar zv-tabbar--fixed">
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="zv-tabbar-item zv-tabbar-item--active">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`watch tabbar value 1`] = `
<div class="zv-hairline--top-bottom zv-tabbar zv-tabbar--fixed">
  <div class="zv-tabbar-item">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">Tab</div>
  </div>
  <div class="zv-tabbar-item zv-tabbar-item--active">
    <div class="zv-tabbar-item__icon">
      <!---->
    </div>
    <div class="zv-tabbar-item__text">Tab</div>
  </div>
</div>
`;
